<resources>
    <string name="app_name" translatable="false">Rate me</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="posts">Posts</string>
    <string name="people">People</string>
    <string name="music">Music</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark mode</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="email_hint">Exp: email@example.com</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="password_hint">Type a strong password</string>
    <string name="username_hint">Type your username</string>
    <string name="create_a_new_post">Create a new post</string>
    <string name="title_hint">Type the title</string>
    <string name="description_hint">Type the description</string>
    <string name="add_post">Add post</string>
    <string name="password_hint_login">Type your password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="you_don_t_have_an_account">You don\'t have an account ?</string>
    <string name="password_reset">Password reset</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="chat">Chat</string>
    <string name="social">Social</string>
    <string name="profile">Profile</string>
    <string name="fullName">FullName</string>
    <string name="logout">Logout</string>
    <string name="logout_message">Are you sure to want to logout ?</string>
    <string name="edit_profile">Edit profile</string>
    <string name="mapbox_access_token">pk.eyJ1IjoibWFoZXJhbGkiLCJhIjoiY2wyZXRvMXc5MDQwbzNlbnpod2l3Nm9sMSJ9.HIzNbLYMYAhRFr9c9FxlkQ</string>
    <string name="title_activity_comments">CommentsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="_0">0</string>
    <string name="my_location">My location</string>
    <string name="location">location</string>
    <string name="people_in_this_place">People who were here :</string>
    <string name="add_comment">Add comment</string>
    <string name="comment">Comment</string>
    <string name="new_message">New message</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="rate_this_profile">Rate this profile</string>
    <string name="your_rating">Your rating : </string>
    <string name="contact">Contact</string>
    <string name="block">Block</string>
    <string name="update">Update</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="lastname_hint">Please type your lastname</string>
    <string name="firstname_hint">Please type your firstname</string>
    <string name="sendMessage">Send message</string>
    <string name="edit_profile_picture">Edit profile picture</string>
    <string name="song_title">Song Title</string>
    <string name="artist">Artist</string>
    <string name="please_type_your_email">Please type your email</string>
    <string name="reset_code">Reset Code</string>
    <string name="please_type_the_code_received_in_your_email">Please type the code received in your email</string>
    <string name="please_type_your_new_password">Please type your new password</string>
    <string name="new_password">New password</string>
    <string name="password_confirmation">Password confirmation</string>
    <string name="generate_profile_qr">Generate my QR</string>
    <string name="scan_profile_qr">Scan profile QR</string>
    <string name="send">Send</string>
    <string name="your_posts">Your posts</string>
</resources>