<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/profileIV"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_person" />

        <Button
            android:id="@+id/editProfilePictureButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/edit_profile_picture"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:textColor="@color/black"
            android:textFontWeight="100"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/username"
            android:textColor="@color/textPrimary" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameTF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/firstname"
            android:textColor="@color/textPrimary" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstnameTF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/firstname_hint" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/lastname"
            android:textColor="@color/textPrimary" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastnameTF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastname_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/editProfileButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/update"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>