<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/albumArtImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_music_video" />


    <TextView
        android:id="@+id/songTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/albumArtImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/song_title"
        android:textColor="@color/textPrimary"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/artistTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/songTitleTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/artist"
        android:textColor="#808080"
        android:textSize="14sp" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/artistTextView"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:padding="4dp" />

    <LinearLayout
        android:id="@+id/controlButtonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/seekBar"
        android:layout_marginTop="24dp"
        android:gravity="center">

        <ImageButton
            android:id="@+id/previousButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_previous"
            app:tint="@color/textPrimary" />

        <ImageButton
            android:id="@+id/playPauseButton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_play"
            app:tint="@color/colorAccent" />

        <ImageButton
            android:id="@+id/nextButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_next"
            app:tint="@color/textPrimary" />

    </LinearLayout>

</RelativeLayout>
